PRL-4266: merged manage order  new branch